# alt

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
crates/alt-cdc/: Cargo.toml
crates/alt-cdc/benches/: chunking.rs
crates/alt-cdc/src/: lib.rs
crates/alt-cli/: Cargo.toml
crates/alt-cli/benches/: daemon_open.rs
crates/alt-cli/src/: blame.rs  ci.rs  cli.rs  client.rs  commit_sign.rs  config_cmd.rs  daemon.rs  group_commit.rs  index_tx.rs  json.rs  lib.rs  log_cmd.rs  main.rs  native.rs  policy.rs  quote.rs
crates/alt-cli/tests/it/: add_ignore.rs  altd_server.rs  blame.rs  branch_switch.rs  capability_gate.rs  cherry_pick.rs  ci_validate.rs  cli_matrix.rs  clone.rs  commit_loop.rs  config.rs  corpus_cli.rs  credential_helper.rs  daemon_client.rs  daemon_server.rs  diff.rs  fetch.rs  flow.rs  flow_enforce.rs  flow_kill.rs  flow_release_hotfix.rs  identity.rs  import_materialize.rs  log_patch.rs  main.rs  merge.rs  monorepo_bench.rs  op_log.rs  push.rs  push_policy.rs  push_wire_ext.rs  read_json.rs  remote.rs  show.rs  status_json.rs  tag.rs  undo_add.rs  url_rewrite.rs  verify_commit.rs  wire_corpus.rs  (+3 more)
crates/alt-diff/: Cargo.toml
crates/alt-diff/src/: binary.rs  histogram.rs  lib.rs  part_aware.rs  perceptual.rs  structured.rs
crates/alt-export/: Cargo.toml
crates/alt-export/src/: lib.rs
crates/alt-export/tests/it/: corpus_roundtrip.rs  edge_cases.rs  export_cycle.rs  main.rs
crates/alt-flow/: Cargo.toml
crates/alt-flow/src/: lib.rs
crates/alt-git-codec/: Cargo.toml
crates/alt-git-codec/src/: commit.rs  headers.rs  kind.rs  lib.rs  loose.rs  oid.rs  tag.rs  tree.rs
crates/alt-git-codec/tests/: corpus_sweep.rs  loose_git_interop.rs  object_roundtrip.rs
crates/alt-git-codec/tests/common/: mod.rs
crates/alt-git-codec/tests/it/: common.rs  corpus_sweep.rs  loose_git_interop.rs  main.rs  object_roundtrip.rs
crates/alt-git-config/: Cargo.toml
crates/alt-git-config/src/: include.rs  lib.rs  parse.rs  wildmatch.rs
crates/alt-git-config/tests/it/: config_interop.rs  main.rs
crates/alt-git-index/: Cargo.toml
crates/alt-git-index/src/: lib.rs
crates/alt-git-index/tests/it/: index_interop.rs  main.rs
crates/alt-git-pack/: Cargo.toml
crates/alt-git-pack/benches/: delta_apply.rs
crates/alt-git-pack/src/: cache.rs  delta.rs  idx.rs  index_pack.rs  lib.rs  pack.rs  write.rs
crates/alt-git-pack/tests/it/: corpus_pack.rs  main.rs  pack_read.rs  pack_write.rs
crates/alt-git-refs/: Cargo.toml
crates/alt-git-refs/src/: lib.rs  packed.rs  reftable.rs  write.rs
crates/alt-git-refs/tests/it/: main.rs  refs_interop.rs  refs_reftable.rs  refs_write.rs
crates/alt-import/: Cargo.toml
crates/alt-import/src/: lib.rs
crates/alt-import/tests/it/: corpus_bench.rs  corpus_import.rs  import_flow.rs  large_files_bench.rs  main.rs
crates/alt-merge/: Cargo.toml
crates/alt-merge/src/: lib.rs
crates/alt-odb/: Cargo.toml
crates/alt-odb/src/: lib.rs  map.rs  tier1.rs
crates/alt-odb/tests/it/: corpus_objects.rs  main.rs  odb_lifecycle.rs
crates/alt-oplog/: Cargo.toml
crates/alt-oplog/src/: lib.rs
crates/alt-oplog/tests/it/: main.rs  oplog_lifecycle.rs
crates/alt-prism/: Cargo.toml
crates/alt-prism-deflate/: Cargo.toml
crates/alt-prism-deflate/src/: lib.rs
crates/alt-prism-png/: Cargo.toml
crates/alt-prism-png/src/: lib.rs
crates/alt-prism-store/: Cargo.toml
crates/alt-prism-store/src/: lib.rs  tier1map.rs
crates/alt-prism-zip/: Cargo.toml
crates/alt-prism-zip/src/: lib.rs
crates/alt-prism/src/: lib.rs
crates/alt-refs/: Cargo.toml
crates/alt-refs/src/: lib.rs  snapshot.rs  tx.rs
crates/alt-refs/tests/it/: crash_injection.rs  main.rs  refs_lifecycle.rs
crates/alt-repo/: Cargo.toml
crates/alt-repo/src/: lib.rs  odb.rs  revwalk.rs
crates/alt-repo/tests/it/: main.rs  native_backend.rs  repo_interop.rs
crates/alt-sign/: Cargo.toml
crates/alt-sign/src/: lib.rs
crates/alt-store/: Cargo.toml
crates/alt-store/benches/: read_path.rs  store_hot.rs
crates/alt-store/src/: blob.rs  blobmap.rs  delta.rs  idx.rs  lib.rs  pack.rs
crates/alt-store/tests/it/: blob_store.rs  chunk_store.rs  corpus_blobs.rs  main.rs
crates/alt-testutil/: Cargo.toml
crates/alt-testutil/src/: lib.rs
crates/alt-treediff/: Cargo.toml
crates/alt-treediff/src/: lib.rs
crates/alt-verify/: Cargo.toml
crates/alt-verify/src/: main.rs
crates/alt-web/: Cargo.toml
crates/alt-web/src/: api.rs  lib.rs  ooxml.rs  router.rs
crates/alt-web/tests/it/: endpoint_smoke.rs  main.rs
crates/alt-wire/: Cargo.toml
crates/alt-wire-http/: Cargo.toml
crates/alt-wire-http/src/: lib.rs
crates/alt-wire-http/tests/: transport.rs
crates/alt-wire/src/: caps.rs  fetch.rs  lib.rs  ls_refs.rs  pkt.rs  push.rs
crates/alt-wire/tests/: parser_fuzz.rs
crates/alt-worktree/: Cargo.toml
crates/alt-worktree/src/: ignore.rs  lib.rs
crates/alt-worktree/tests/it/: ignore_scan.rs  main.rs  status_interop.rs
docs/design/: anti-rot-protocol.md  mental-model.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AltOnlyInsights.tsx  BinaryDiff.tsx  CodeBlock.tsx  CommitFootprint.tsx  DiffView.tsx  DocumentDiff.tsx  FingerprintGrid.tsx  ImageDiffView.tsx  ImagePreview.tsx  Layout.tsx  StorageFootprint.tsx  StoragePanel.tsx  SyntaxBlock.tsx  XlsxGridDiff.tsx
frontend/src/lib/: api.ts  format.ts  highlight.ts  hooks.ts  image.ts  lang.ts
frontend/src/pages/: Browse.tsx  Commit.tsx  FileHistory.tsx  Home.tsx  Log.tsx  RepoHome.tsx
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: codec_parse.rs  diff_apply.rs  index_parse.rs  merge3.rs  pack_delta_apply.rs  prism_deflate.rs  store_delta_decode.rs
scripts/: build-demo-binaries.sh  build-large-corpus.sh  build-monorepo-corpus.sh  deploy-repos.sh  deploy-web.sh  gate.sh  sync-alt-golia.sh  sync-github.sh  sync-mini.sh
