[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
alt-git-codec = { path = "crates/alt-git-codec" }
alt-git-pack = { path = "crates/alt-git-pack" }
alt-git-refs = { path = "crates/alt-git-refs" }
alt-repo = { path = "crates/alt-repo" }
alt-testutil = { path = "crates/alt-testutil" }

bstr = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
memmap2 = "0.9"
rayon = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
