[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alt-cdc = { path = "crates/alt-cdc" }
alt-diff = { path = "crates/alt-diff" }
alt-git-codec = { path = "crates/alt-git-codec" }
alt-git-config = { path = "crates/alt-git-config" }
alt-store = { path = "crates/alt-store" }
alt-git-index = { path = "crates/alt-git-index" }
alt-git-pack = { path = "crates/alt-git-pack" }
alt-export = { path = "crates/alt-export" }
alt-flow = { path = "crates/alt-flow" }
alt-git-refs = { path = "crates/alt-git-refs" }
alt-import = { path = "crates/alt-import" }
alt-merge = { path = "crates/alt-merge" }
alt-odb = { path = "crates/alt-odb" }
alt-oplog = { path = "crates/alt-oplog" }
alt-prism = { path = "crates/alt-prism" }
alt-prism-deflate = { path = "crates/alt-prism-deflate" }
alt-prism-store = { path = "crates/alt-prism-store" }
alt-refs = { path = "crates/alt-refs" }
alt-repo = { path = "crates/alt-repo" }
alt-sign = { path = "crates/alt-sign" }
alt-treediff = { path = "crates/alt-treediff" }
alt-wire = { path = "crates/alt-wire" }
alt-wire-http = { path = "crates/alt-wire-http" }
alt-worktree = { path = "crates/alt-worktree" }
alt-testutil = { path = "crates/alt-testutil" }

blake3 = { version = "1", features = ["rayon"] }
bstr = "1"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
encoding_rs = "0.8"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
libc = "0.2"
memmap2 = "0.9"
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
rayon = "1"
sha1 = "0.10"
sha2 = "0.10"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
tempfile = "3"
tiny_http = { version = "0.12", default-features = false }
thiserror = "2"
zstd = "0.13"
