[package]
name = "alt-cdc"
description = "FastCDC content-defined chunking: gear hash, normalized cut-points, bounded chunk sizes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "chunking"
harness = false
