[package]
name = "alt-cli"
description = "The alt command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "alt_cli"
path = "src/lib.rs"

[[bin]]
name = "alt"
path = "src/main.rs"

[[bin]]
name = "altd"
path = "src/bin/altd.rs"

[dependencies]
alt-diff.workspace = true
alt-git-codec.workspace = true
alt-git-index.workspace = true
alt-export.workspace = true
alt-flow.workspace = true
alt-import.workspace = true
alt-merge.workspace = true
alt-odb.workspace = true
alt-refs.workspace = true
alt-repo.workspace = true
alt-worktree.workspace = true
bstr.workspace = true
clap.workspace = true
encoding_rs.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
alt-oplog.workspace = true
alt-testutil.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "daemon_open"
harness = false
