[package]
name = "alt-git-codec"
description = "Git object model codec: loose objects, commits, trees, tags, and object hashing (SHA-1/SHA-256)"
version.workspace = true
edition.workspace = true

[dependencies]
bstr.workspace = true
flate2.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
