[package]
name = "alt-git-pack"
description = "Git packfile reading: idx lookup, entry decoding, delta resolution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alt-git-codec.workspace = true
flate2.workspace = true
memmap2.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
alt-testutil.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "delta_apply"
harness = false
