[package]
name = "alt-import"
description = "alt import: full .git to .alt migration — objects, refs, and preserved config, idempotent and re-entrant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alt-git-codec.workspace = true
alt-git-pack.workspace = true
alt-git-refs.workspace = true
alt-odb.workspace = true
alt-refs.workspace = true
alt-repo.workspace = true
bstr.workspace = true
thiserror.workspace = true

[dev-dependencies]
alt-testutil.workspace = true
tempfile.workspace = true
