[package]
name = "alt-oplog"
description = "alt operation log: append-only, hash-chained op records with crash recovery and replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
