[package]
name = "alt-prism-zip"
description = "ZIP container prism: split a ZIP/OOXML/JAR/EPUB into its envelope + inflated member bodies, record per-entry deflate parameters, recompose bit-exactly via C libz raw-deflate."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alt-prism.workspace = true
flate2.workspace = true
libc.workspace = true
libz-sys = "1"
