[package]
name = "alt-repo"
description = "Repository facade: storage backend abstraction over alt's native store and imported git repositories"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alt-git-codec.workspace = true
alt-git-config.workspace = true
alt-git-pack.workspace = true
alt-git-refs.workspace = true
bstr.workspace = true
thiserror.workspace = true

[dev-dependencies]
alt-testutil.workspace = true
tempfile.workspace = true
